--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -48,7 +48,7 @@
     color: black;
   }
 
-  &__link_downBtn {
+  &__link_down-button {
     width: 21px;
     height: 11px;
     background: url("./../img/headDown.svg") no-repeat 3px 0px;
