--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -1,4 +1,4 @@
-.btn {
+.button {
   font-weight: bold;
   font-size: 12px;
   text-transform: uppercase;
@@ -45,7 +45,7 @@
     }
 
     &_form {
-      background: url("./images/btn-arrow-to-the-right.svg") no-repeat 95.8% 50%, linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      background: url("./images/button-arrow-to-the-right.svg") no-repeat 95.8% 50%, linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
       text-transform: uppercase;
       color: #fff;
       font-weight: bold;
