--- a/src/components/drop-down/drop-down.pug
+++ b/src/components/drop-down/drop-down.pug
@@ -15,16 +15,16 @@ mixin drop-down(options={})
   section.drop-down.js-drop-down
     div.drop-down__title=title 
     div.drop-down__header
-      button.drop-down__title-btn.js-drop-down__title-btn Сколько гостей
+      button.drop-down__title-button.js-drop-down__title-button Сколько гостей
 
     div(class=`drop-down__items  js-drop-down__items ${classModifier}`)
       -for(let item of list )
         div.drop-down__item
           div.drop-down__item-title=item
           div.drop-down__item-buttons 
-            button.drop-down__item-buttons-inc.js-drop-down__item-buttons-inc#inc -
+            button.drop-down__item-buttons-increment.js-drop-down__item-buttons-increment#increment -
             div.drop-down__item-buttons-count.js-drop-down__item-buttons-count 0
-            button.drop-down__item-buttons-dec#dec +
+            button.drop-down__item-buttons-decrement#decrement +
             
       div.drop-down__item
         div.drop-down__item-buttons-control 
