--- a/src/components/input-form/input-form.scss
+++ b/src/components/input-form/input-form.scss
@@ -22,7 +22,7 @@
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
 
-  &__email-btn{
+  &__email-button{
     width: 44px;
     height: 44px;
     background: url('./img/arrow-forward.svg')no-repeat 50%;
