--- a/src/components/input-form/input-form.pug
+++ b/src/components/input-form/input-form.pug
@@ -20,7 +20,7 @@ mixin input-form(options = {})
 
   if(isForm)
     form(action="#" class=`form-email ${classModification}`) 
-      input(class='input-form input-form_email' type="text" placeholder="Email")
+      input(class='input-form input-form_email' type="email" placeholder="Email")
       button(class='input-form__email-button' type="submit")
   else
     input(class=`input-form ${classModification}` type="text" value=value placeholder=placeholder)
