--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -3,16 +3,18 @@
   height: 20px;
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 10px;
-  background: url('./images/favorite-painted.svg')no-repeat 4px 4px;
-  
+  background: url('./images/favorite-painted.svg')no-repeat 5px 5px;
+  cursor: pointer;
+  display: flex;
   &__count {
     color: rgba(31, 32, 65, 0.25);
     font-size: 10px;
-    margin-left: 22px;
+    margin-left: 20px;
+    margin-top: 1px;
   }
 
   &_action{
-    background: url('./images/favorite.svg')no-repeat 4px 4px;
+    background: url('./images/favorite.svg')no-repeat 5px 5px;
     color: #BC9CFF;
     border-color:#BC9CFF;
   }  
