--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -35,6 +35,7 @@
 .ui-slider.ui-state-disabled .ui-slider-handle,
 .ui-slider.ui-state-disabled .ui-slider-range {
   filter: inherit;
+  
 }
 
 .ui-slider-horizontal {
@@ -68,6 +69,7 @@
   left: -0.3em;
   margin-left: 0;
   margin-bottom: -0.6em;
+  
 }
 
 .ui-slider-vertical .ui-slider-range {
@@ -113,6 +115,7 @@ html .ui-button.ui-state-disabled:active {
   color: #454545;
   border-radius: 0.625rem;
   outline: none;
+  cursor: pointer;
 }
 
 .range-slider {
