--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -27,8 +27,11 @@
     margin-bottom: 19px;
     width: 100%;
 
+    &:nth-child(3){
+      margin-bottom: 22px;
+    }
     &:nth-child(5){
-      margin-top: 22px;
+      margin-top: 16px;
     }
 
     &:nth-child(6){
@@ -94,11 +97,11 @@
   &__row-checkbox-item{
 
     &:nth-child(2){
-      margin-top: 43px;
+      margin-top: 40px;
     }
 
     &:nth-child(3){
-      margin-top: 39px;
+      margin-top: 40px;
     }
 
     &:nth-child(4){
