fix Landing page #18

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -16,8 +16,8 @@ footer.footer
           +subscription({title:'Подписка',text:'Получайте специальные<br> предложения и новости сервиса'})
           
     div.footer__icon
-      span.footer__ico-text Copyright © 2018 Toxin отель. Все права защищены.  
-      span.footer__icons
+      span.footer__icon-text Copyright © 2018 Toxin отель. Все права защищены.  
+      span.footer__icon-items
         a(href="https://twitter.com/?lang=ru")
           img(src="./images/twitter.svg", alt="twitter")   
         a(href="https://ru-ru.facebook.com/")   
