--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -26,7 +26,7 @@
   &__input {
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
-    padding: 8px 0 10px 16px;
+    padding: 8px 0 10px 13px;
     width: 100%;
     font-size: 15px;
     line-height: 24px;
@@ -88,6 +88,7 @@
 
 //------------------------------------------
 // стили чтобы подогнать календарь под макет
+
 .datepicker {
   width: max-content;
   padding-bottom: 1.25rem;
@@ -111,7 +112,14 @@
       border: 0rem;
     }
   }
+  &.-bottom-left-,
+  &.-bottom-left-.active {
+    margin-left: -0.125rem;
 
+    @media screen and (max-width: 342px) {
+      margin-left: -0.7rem
+    }
+  }
   &.active {
     width: max-content;
   }
@@ -398,6 +406,7 @@
       justify-content: space-between;
     }
   }
+  
 }
 // стили чтобы подогнать календарь под макет
 //-------------------------------------------
