--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -14,14 +14,14 @@
   }
 
   &__warp {
-    padding: 99px 140px 0px 140px;
+    padding: 100px 140px 0px 140px;
     max-width: 1440px;
     margin: 0px auto;
   }
 
   &__body {
     display: flex;
-    margin-bottom: 128px;
+    margin-bottom: 125px;
     width: 100%;
   }
 
@@ -35,8 +35,8 @@
   &__text {
     font-size: 14px;
     line-height: 24px;
-    padding-top: 57px;
-    background: url("./img/logo.svg") no-repeat 0px 0px;
+    padding-top: 58px;
+    background: url("./img/logo.svg") no-repeat 0px 1px;
     max-width: 260px;
     margin-right: 40px;
   }
@@ -53,13 +53,13 @@
     justify-content: space-between;
     height: 43px;
   }
-
-  &__icons {
+  &__icon-text{
+    margin-top: 2px;
+  }
+  &__icon-items {
     display: flex;
-
-    & a {
-      margin-left: 20px;
-    }
+    justify-content: space-between;
+    width: 114px;
   }
 
   @media (max-width: 1254px) {
@@ -87,16 +87,15 @@
     }
   }
 
-  @media (max-width: 1024px) {
-    &__nav {
-      flex-wrap: wrap;
-      justify-content: center;
+  @media (max-width: 1176px) {
+    &__warp{
+      padding: 40px 20px 14px 20px;
     }
-
-    &__list {
-      margin-bottom: 20px;
+    &__body{
+      margin-bottom: 40px;
     }
   }
+
   
   @media (max-width: 768px) {
     padding-bottom: 100px;
@@ -122,16 +121,9 @@
 
     &__icon {
       flex-direction: column;
+      align-items: center;
     }
-
-  }
-
-  @media (max-width: 662px) {
-    padding-bottom: 50px;
- 
-    &__warp {
-      padding: 50px 50px 0px 50px;
-    }
- 
+    &__icon-text{
+      margin-bottom: 22px;    }
   }
 }
