--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -6,7 +6,7 @@
   &__item {
     display: flex;
     justify-content: flex-end;
-    padding: 17px 141px 14px 140px;
+    padding: 14px 141px 14px 140px;
     max-width: 1440px;
     margin: 0px auto;
     position: relative;
@@ -51,20 +51,18 @@
   &__link_down-button {
     width: 21px;
     height: 11px;
-    background: url("./../img/headDown.svg") no-repeat 3px 0px;
-    margin-left: 0px;
+    background: url("./../img/headDown.svg") no-repeat 3px 3px;
+    margin-top: 0px;
   }
 
-  @media (max-width: 1154px) {
-    &__item {
-      padding-right: 30px;
-      background: url("./../img/logo.svg") no-repeat 30px 15px;
+  @media (max-width: 1176px) {
+    &__item{
+      padding: 14px 20px 14px 20px;
     }
   }
-
+  
   @media (max-width: 962px) {
     &__item {
-      padding-left: 30px;
       background: #fff url("");
     }
 
