--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -6,7 +6,7 @@
   &__item {
     display: flex;
     justify-content: flex-end;
-    padding: 14px 141px 14px 140px;
+    padding: 15px 141px 14px 140px;
     max-width: 1440px;
     margin: 0px auto;
     position: relative;
@@ -14,41 +14,51 @@
     justify-content: space-between;
   }
 
-  &__list {
+  &__nav {
+    display: flex;
+    align-items: center;
+    position: relative;
+
+  }
+  &__nav-list {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     margin-left: 0px;
   }
 
-  &__link {
+  &__nav-list-item-link {
+    color: rgba(31, 32, 65, 0.5);
+  }
+  &__nav-list-item {
     margin-right: 20px;
-
     &:last-child {
       margin-right: 0px;
     }
   }
-
-  &__link_name {
+  
+  &__nav-list-item-name {
     vertical-align: center;
     padding-left: 22px;
     position: relative;
+
     &::before {
       content: "";
       width: 1px;
       height: 30px;
       background: rgba(31, 32, 65, 0.1);
       position: absolute;
-      left: 0px;
+      left: 2px;
+      top: -5px;
     }
   }
-
-  &__link_bold {
+  
+  &__nav-list-item-link_bold {
     font-weight: bold;
-    color: black;
+    color: rgba(31, 32, 65, 0.75);
   }
 
-  &__link_down-button {
+  &__nav-list-item_down-button {
     width: 21px;
     height: 11px;
     background: url("./../img/headDown.svg") no-repeat 3px 3px;
@@ -70,7 +80,7 @@
       justify-content: center;
     }
 
-    &__link {
+    &__nav-list-item {
       margin-bottom: 10px;
     }
     
