--- a/src/components/input-masked/input-masked.pug
+++ b/src/components/input-masked/input-masked.pug
@@ -1,9 +1,10 @@
 mixin input-masked (options={})
   -
     const {
-      placeholder = ''
+      placeholder = '',
+      title = 'masked text field'
     } = options;
   
   section.masked.js-masked
-    div.masked__title masked text field
+    div.masked__title=title 
     input(class='masked__input js-masked__input' spellcheck="false" type="numeric" placeholder='ДД.ММ.ГГГГ')
