--- a/src/components/slide/slide.scss
+++ b/src/components/slide/slide.scss
@@ -1,23 +1,36 @@
-.slick_slide {
-  width: 270px;
-  background-color: #ffffff;
-
-  &__footer {
-    background-color: #ffffff;
-    width: 270px;
-    padding: 16px 20px 17px 22px;
-  }
-
-  &__footer-text {
-    margin-bottom: 23px;
-  }
-
-  &__img {
+.slick {
+  &__slide {
     width: 270px;
     height: 151px;
   }
 
-  &__footer-review {
+  &__slide-footer {
+    background-color: #ffffff;
+    width: 270px;
+    padding: 24px 20px 17px 22px;
+  }
+
+  &__slide-footer-text {
+    padding-bottom: 14px;
+    position: relative;
+    &:after {
+      content: "";
+      width: 100%;
+      height: 1px;
+      background: rgba(31, 32, 65, 0.1);
+      position: absolute;
+      bottom: 0px;
+    }
+  }
+
+  &__slide-img {
+    width: 270px;
+    height: 150px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+  }
+
+  &__slide-footer-review {
     font-weight: bold;
     font-size: 14px;
     line-height: 18px;
@@ -27,19 +40,17 @@
       content: " Отзывов";
       font-weight: normal;
     }
-
   }
 
-  &__footer-rating {
+  &__slide-footer-rating {
+    padding-top: 8px;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  
 }
-
 .slick-prev {
-  background: url('./images/arrow-to-the-left.svg') no-repeat 50%;
+  background: url("./images/arrow-to-the-left.svg") no-repeat 50%;
   width: 44px;
   height: 44px;
   font-size: 0px;
@@ -50,7 +61,7 @@
 }
 
 .slick-next {
-  background: url('./images/arrow-to-the-right.svg') no-repeat 50%;
+  background: url("./images/arrow-to-the-right.svg") no-repeat 50%;
   width: 44px;
   height: 44px;
   font-size: 0px;
@@ -82,5 +93,4 @@
     border-radius: 50%;
     background: #ffffff;
   }
-  
 }
