--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -2,7 +2,7 @@
   max-width: 1440px;
   padding: 152px 140px 140px 140px;
   display: flex;
-
+  background: #E5E5E5;
   &__left-colum {
     display: flex;
     flex-direction: column;
@@ -22,7 +22,7 @@
   }
 
   &__right-colum-item {
-    margin-bottom: 70px;
+    margin-bottom: 73px;
     &:nth-child(2){
       margin-bottom: 41px;
     }
