fix Form-elements page #15

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -354,7 +354,7 @@
         font-size: 1.5rem;
         line-height: 1.5rem;
         border: 0rem solid transparent;
-        background: #fff url(/images/arrow-back.svg) no-repeat 0px 0px;
+        background: #fff url(./images/arrow-back.svg) no-repeat 0px 0px;
       }
 
       &:last-child::after {
