--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -82,7 +82,7 @@
   }
 
   &__item-check-input:checked + &__item-checkbox{
-    background: url('/img/vector.svg')no-repeat 50%;
+    background: url('./img/vector.svg')no-repeat 50%;
     border-color: #BC9CFF;
   }
 
