--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -61,7 +61,7 @@
   &__nav-list-item_down-button {
     width: 21px;
     height: 11px;
-    background: url("./../img/headDown.svg") no-repeat 3px 3px;
+    background: url("./img/headDown.svg") no-repeat 3px 3px;
     margin-top: 0px;
   }
 
