--- a/src/components/price-room/price-room.scss
+++ b/src/components/price-room/price-room.scss
@@ -5,7 +5,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 47px 30px 28px 29px;
-  background:#ffffff url('/img/rectangle2.svg')no-repeat 90px 412px;
+  background:#ffffff url('./img/rectangle2.svg')no-repeat 90px 412px;
   max-width: 380px;
 
   &__header {
