--- a/src/components/sign-in/sign-in.scss
+++ b/src/components/sign-in/sign-in.scss
@@ -4,7 +4,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 39px 30px 20px 29px;
-  max-width: 380px;
+  width: 380px;
 
   &__title {
     font-weight: bold;
