--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -13,7 +13,7 @@
     margin-top: 1px;
   }
 
-  &_action{
+  &_pressed{
     background: url('./images/favorite.svg')no-repeat 5px 5px;
     color: #BC9CFF;
     border-color:#BC9CFF;
