fix link in the code

--- a/src/components/buttons/buttons.pug
+++ b/src/components/buttons/buttons.pug
@@ -2,7 +2,7 @@ mixin buttons(options = {})
   -
     const {
       text = 'CLICK ME',
-      href = '#',
+      href = 'https://www.error.com/',
       modifier=[], 
     } = options;
     
