--- a/src/components/footer-navigation/footer-navigation.pug
+++ b/src/components/footer-navigation/footer-navigation.pug
@@ -2,7 +2,7 @@ mixin footer-navigation (options = {})
   -
     const {
       title = 'навигация',
-      list = [{text:'О нас',href:'#'}],     
+      list = [{text:'О нас',href:'https://www.error.com/'}],     
     } = options;
 
   section.footer-navigation
