--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -31,13 +31,13 @@
     font-size: 15px;
     line-height: 24px;
     color: rgba(31, 32, 65, 0.75);
-
+    background: url('./img/arrow-down.svg')93% 57% no-repeat;
     &::placeholder {
       color: rgba(31, 32, 65, 0.25);
       font-size: 14px;
       line-height: 18px;
     }
-
+    
     &:active,
     &:focus,
     &:hover {
@@ -98,9 +98,7 @@
   box-shadow: 0rem 0.625rem 1.25rem rgba(31, 32, 65, 0.05);
   border-radius: 0.25rem;
   
-  // &--nav-title{
-  //   font-family: Montserrat, Arial, sans-serif;
-  // }
+
   &--pointer {
     display: none;
   }
