--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  position: relative;
 
   &__title {
     font-weight: bold;
@@ -35,6 +36,11 @@
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 0px 0px 4px 4px;
     display: none;
+    background-color: #fff;
+    position: absolute;
+    top: 64px;
+    z-index: 1;
+    width: 100%;
   }
 
   &__items_show {
