--- a/src/components/head/head.pug
+++ b/src/components/head/head.pug
@@ -40,7 +40,7 @@ mixin head(options = {})
               +buttons({
                 modifier:['border','height-34','min-width-87'],
                 text:'войти',
-                href:'sign-in.html'
+                href:'main-sign-in.html'
               })
 
             li.head__nav-list-item
