add target for link #17

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -18,10 +18,10 @@ footer.footer
     div.footer__icon
       span.footer__icon-text Copyright © 2018 Toxin отель. Все права защищены.  
       span.footer__icon-items
-        a(href="https://twitter.com/?lang=ru")
+        a(href="https://twitter.com/?lang=ru" target="_blank")
           img(src="./images/twitter.svg", alt="twitter")   
-        a(href="https://ru-ru.facebook.com/")   
+        a(href="https://ru-ru.facebook.com/" target="_blank")   
           img(src="./images/facebook.svg", alt="facebook")   
-        a(href="https://www.instagram.com/?hl=ru")   
+        a(href="https://www.instagram.com/?hl=ru" target="_blank")   
           img(src="./images/instagram.svg", alt="instagram")   
 
