--- a/src/components/account-registration/account-registration.pug
+++ b/src/components/account-registration/account-registration.pug
@@ -31,7 +31,7 @@ mixin account-registration(title)
       +toggle('Получать спецпредложения',false)
     
     div.account-registration__item
-      +buttons({modifier:['form'],text:'перейти к оплате'})
+      +buttons({modifier:['form'],text:'зарегистрироваться'})
     
     div.account-registration__item
       div.account-registration__footer
